--- a/package.json
+++ b/package.json
@@ -1,11 +1,20 @@
 {
+  "name": "emailsender",
+  "version": "1.0.0",
+  "description": "backend server for web",
+  "main": "index.js",
+  "scripts": {
+    "serve": "nodemon index.js"
+  },
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^3.1.0"
+  },
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "nodemailer": "^6.9.16",
     "nodemon": "^3.1.7"
   },
-  "scripts": {
-    "start": "node index.js"
-  }
 }
